# motion_system_ros2

./: .gitmodules  README.md
common/common_motor_interface/: CMakeLists.txt  README.md  package.xml
common/common_motor_interface/include/common_motor_interface/: motor_frame.hpp
common/common_robot_interface/: README.md  package.xml  setup.cfg  setup.py
common/common_robot_interface/src/common_robot_interface/: __init__.py  action_frame.py  joint_frame.py  state_frame.py
ros2/motion_system_ros2/: README.md
ros2/motion_system_ros2/midi_motion_control/: CMakeLists.txt  package.xml
ros2/motion_system_ros2/midi_motion_control/launch/: midi_motion_control_node.launch.py
ros2/motion_system_ros2/midi_motion_control/src/: midi_motion_control_node.cpp
ros2/motion_system_ros2/motion_control_bridge/: CMakeLists.txt  package.xml
ros2/motion_system_ros2/motion_control_bridge/config/: example_canopen_zeroerr.yaml  example_ethercat_minas.yaml  example_ethercat_zeroerr.yaml  example_serial_dynamixel.yaml  example_socketcan_cubemars.yaml
ros2/motion_system_ros2/motion_control_bridge/include/motion_control_bridge/: motor_manager_node.hpp
ros2/motion_system_ros2/motion_control_bridge/launch/: motor_manager_node.launch.py
ros2/motion_system_ros2/motion_control_bridge/src/: motor_manager_node.cpp
ros2/motion_system_ros2/motion_control_midi/: CMakeLists.txt  package.xml
ros2/motion_system_ros2/motion_control_midi/launch/: motion_control_midi_node.launch.py
ros2/motion_system_ros2/motion_control_midi/src/: motion_control_midi_node.cpp
ros2/motion_system_ros2/motion_control_msgs/: CMakeLists.txt  package.xml
ros2/motion_system_ros2/motion_control_msgs/msg/: MotorStatus.msg  RobotState.msg
ros2/motion_system_ros2/motion_control_robot/: package.xml  setup.cfg  setup.py
ros2/motion_system_ros2/motion_control_robot/config/: rocking_chair.yaml
ros2/motion_system_ros2/motion_control_robot/launch/: robot_manager_node.launch.py
ros2/motion_system_ros2/motion_control_robot/motion_control_robot/: robot_manager_node.py
ros2/motion_system_ros2/motion_control_robot/motions/: rocking_chair.csv
ros2/motion_system_ros2/motion_control_rqt/: .gitattributes  CMakeLists.txt  package.xml  plugin.xml
ros2/motion_system_ros2/motion_control_rqt/launch/: display_motor_manager_node.launch.py  rocking_chair_robot_manager.launch.py
ros2/motion_system_ros2/motion_control_rqt/resource/: base.ui
ros2/motion_system_ros2/motion_control_rqt/scripts/: run_rqt
ros2/motion_system_ros2/motion_control_rqt/src/motion_control_rqt/: motion_control_controller.py  motor_manager_widget.py  robot_manager_widget.py
ros2/motion_system_ros2/motor_status_msgs/msg/: MotorStatus.msg
ros2/motion_system_ros2/ros2_motor_manager/config/: example.yaml  example_canopen_zeroerr.yaml  example_ethercat_zeroerr.yaml  example_serial_dynamixel.yaml  example_socketcan_cubemars.yaml
ros2/motion_system_ros2/ros2_motor_manager/launch/: motor_manager_node.launch.py
ros2/motion_system_ros2/ros2_motor_manager/param/: cubemars.yaml  minas.yaml
ros2/motion_system_ros2/ros2_motor_manager/param/dynamixel/: xm430_w350.yaml  xm540_w270.yaml
ros2/motion_system_ros2/ros2_motor_manager/src/: motor_manager_node.cpp
ros2/motion_system_ros2/rqt_motion_control/: CMakeLists.txt  package.xml  plugin.xml
ros2/motion_system_ros2/rqt_motion_control/launch/: display_motor_manager_node.launch.py
ros2/motion_system_ros2/rqt_motion_control/resource/: base.ui
ros2/motion_system_ros2/rqt_motion_control/scripts/: run_rqt
ros2/motion_system_ros2/rqt_motion_control/src/rqt_motion_control/: motion_control_controller.py  motor_manager_widget.py
ros2/motion_system_ros2/rqt_motion_system/launch/: display_motor_manager_node.launch.py
