<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_motor_interface</name>
  <version>0.1.0</version>
  <description>Shared motor frame types (motor_frame_t, MAX_INTERFACE_SIZE)</description>
  <maintainer email="seonilchoi98@gmail.com">csi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
