cmake_minimum_required(VERSION 3.8)
project(motion_control_midi CXX)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(midi_msgs REQUIRED)
find_package(motion_control_msgs REQUIRED)
find_package(ament_index_cpp REQUIRED)
find_package(yaml-cpp REQUIRED)

add_executable(motion_control_midi_node
  src/motion_control_midi_node.cpp
)
ament_target_dependencies(motion_control_midi_node
  rclcpp
  std_msgs
  midi_msgs
  motion_control_msgs
  ament_index_cpp
)
target_link_libraries(motion_control_midi_node
  yaml-cpp
)
target_compile_features(motion_control_midi_node PUBLIC cxx_std_17)

install(TARGETS motion_control_midi_node
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
