<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_control_midi</name>
  <version>0.0.0</version>
  <description>X-Touch MIDI state to motor command bridge.</description>
  <maintainer email="seonilchoi98@gmail.com">mini0</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>midi_msgs</depend>
  <depend>motion_control_msgs</depend>
  <depend>ament_index_cpp</depend>

  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_manager</exec_depend>
  <exec_depend>motion_control_robot</exec_depend>
  <exec_depend>motion_control_bridge</exec_depend>
  <exec_depend>xtouch_midi</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
