<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_control_robot</name>
  <version>0.0.0</version>
  <description>ROS 2 package that connects robot_manager to motion control topics.</description>
  <maintainer email="seonilchoi98@gmail.com">csi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>motion_control_msgs</depend>
  <depend>common_robot_interface</depend>
  <depend>robot_manager</depend>
  <exec_depend>python3-numpy</exec_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>p9n_node</exec_depend>
  <exec_depend>motion_control_bridge</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
